# cpp-sdk

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DEPLOY.md  LICENSE  README.md  vcpkg.json
.github/workflows/: cpp-ci.yml
cmake/: configcat-config.cmake.in  cpp-semver.cmake  curl.cmake  hash-library-fix-macos.patch  hash-library.cmake  httplib.cmake  json.cmake
docker/: Dockerfile.remote-cpp-env
example/: CMakeLists.txt  README.md  example.vcxproj  main.cpp
include/configcat/: config.h  configcache.h  configcat.h  configcat.hpp  configcatcache.h  configcatclient.h  configcatclient.hpp  configcatlogger.h  configcatoptions.h  configcatoptions.hpp  configcatuser.h  configfetcher.h  configjsoncache.h  consolelogger.h  consolelogger.hpp  datagovernance.h  datasource.h  evaluationdetails.h  fileoverridedatasource.h  flagoverrides.h  httpsessionadapter.h  keyvalue.h  keyvalue.hpp  log.h  manualpollingpolicy.h  mapoverridedatasource.h  overridedatasource.h  pollingmode.h  proxyauthentication.h  refreshpolicy.h  refreshresult.h  rolloutevaluator.h  settingresult.h  timeutils.h  utils.h  version.h
samples/: Makefile  README.md  example.sln  main.cpp  vcpkg.json
src/: config.cpp  configcat.cpp  configcatclient.cpp  configcatlogger.h  configcatuser.cpp  configentry.cpp  configentry.h  configfetcher.cpp  configfetcher.h  configjsoncache.cpp  configservice.cpp  configservice.h  curlnetworkadapter.cpp  curlnetworkadapter.h  evaluatelogbuilder.cpp  evaluatelogbuilder.h  fileoverridedatasource.cpp  httplibnetworkadapter.cpp.hide  httplibnetworkadapter.h.hide  log.cpp  manualpollingpolicy.cpp  mapoverridedatasource.cpp  platform.h  pollingmode.cpp  refreshpolicy.cpp  rolloutevaluator.cpp  rolloutevaluator.h  settingresult.h  timeutils.cpp  utils.cpp  utils.h  version.h
test/: mock.h  test-autopolling.cpp  test-configV2evaluation.cpp  test-configcache.cpp  test-configcatclient.cpp  test-configcatclientintegration.cpp  test-configcatuser.cpp  test-configfetcher.cpp  test-evaluation.cpp  test-evaluationlog.cpp  test-hello.cpp  test-hooks.cpp  test-lazyloading.cpp  test-log.cpp  test-main.cpp  test-manualpolling.cpp  test-override.cpp  test-rolloutintegration.cpp  test-specialcharacter.cpp  test-utils.cpp  test-variationid.cpp  test.h  test_configcatclient.cpp
test/data/: test.json
